# digriflex

./: .env  .gitignore  DA_code.bat  DiGriFlex_DA.py  DiGriFlex_RT.py  DiGriFlex_Sim.py  Makefile  README.md  RT_code.bat  da_bat.bat  forecast.bat  pyproject.toml  rt_bat.bat  step.csv
.cache/: DA_code.bat  RT_code.bat  step.csv
.makeFile/: make_p_to_json.py
Data/: DATA_tra.RData  Data_Meas_10min_DASRIL_SMILE-FA2018.11.22.mat  IndRes_ReIne_50Hz_perPhase.mat  Irr_tra.csv  Ordre_informations_controle_2020.10.07.xlsx  P_for.csv  P_tra.csv  Synthetized_Profiles_Smile-FA.mat  pred_for.csv  pred_tra.csv  pred_tra_irr.csv  recorded_forecast.csv  recorded_forecast_pv.csv  test_douglas_interface.txt  tmp.pickle  tmp_da.pickle  tmp_da_inside.pickle
Figures/: Plotting_for_paper.ipynb  Schéma.docx  plotting.ipynb  ~$Schéma.docx
Functions_P/: AuxiliaryFunctions.py  OptimizationFunctions.py  TrashCode_Main.py
Functions_R/: Function_DayAhead_Bayesboot_P.R  Function_DayAhead_Bayesboot_Q.R  Function_DayAhead_Bayesboot_irra.R  Function_LQR_Bayesboot.R  Function_LQR_Bayesboot_P.R  Function_LQR_Bayesboot_P_v2.R  Function_LQR_Bayesboot_Q.R  Function_LQR_Bayesboot_Q_v2.R  Function_LQR_Bayesboot_irra.R  PROGRAM_sifunct_LQR_Bayesboot_5.R  PROGRAM_sifunct_LQR_Bayesboot_Irr1.R  PROGRAM_sifunct_LQR_Bayesboot_P.R  PROGRAM_sifunct_LQR_Bayesboot_Q.R
Result/: for2021819.pickle  for2021824.pickle  for2021828.pickle  for2021910.pickle  for2021911.pickle  for2021912.pickle  for2021914.pickle  for2021915.pickle  for2021916.pickle  for2021917.pickle  for2021918.pickle  for2021919.pickle  for2021920.pickle  for2021921.pickle  for2021923.pickle  for2021925.pickle  for2021928.pickle  for202193.pickle  for202197.pickle  for202199.pickle  (+26 more)
(+135 files in other folders)
