[tool.poetry]
name = "digriflex"
version = "0.1.0"
description = ""
authors = ["mohammadrayati <52103775+mohammadrayati@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gurobipy = "^9.5.2"
coloredlogs = "^15.0.1"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
sklearn = "^0.0"
quantecon = "^0.5.3"
questionary = "^1.10.0"
tqdm = "^4.64.1"
rpy2 = "^3.5.5"
mysql-connector-python = "^8.0.31"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
